                                   __
                       _ __ ___   / _|  ___  _ __ ___
                      | '_ ` _ \ | |_  / _ \| '_ ` _ \
                      | | | | | ||  _||  __/| | | | | |
                      |_| |_| |_||_|   \___||_| |_| |_|

                               http://mfem.org


Version 4.0.1 (development)
===========================


Version 4.0, released on May 24, 2019
=====================================

Unlike previous MFEM releases, this version requires a C++11 compiler.

GPU support
-----------
- Added initial support for hardware devices, such as GPUs, and programming
  models, such as CUDA, OCCA, RAJA and OpenMP.

- The GPU/device support is based on MFEM's new backends and kernels working
  seamlessly with a new lightweight device/host memory manager. The kernels can
  be implemented either in OCCA, or as a simple wrapper around for-loops, which
  can then be dispatched to RAJA and native backends. See the files forall.hpp
  and mem_manager.hpp in the general/ directory for more details.

- Several of the MFEM example codes (ex1, ex1p, ex6, and ex6p) can now take
  advantage of GPU acceleration with the backend selectable at runtime. Many of
  the linear algebra and finite element operations (e.g. partially assembled
  bilinear forms) have been extended to take advantage of kernel acceleration by
  simply replacing loops with the MFEM_FORALL() macro.

- In addition to native CUDA kernels, the library currently supports OCCA, RAJA
  and OpenMP kernels, which could be mixed and matched in different parts of the
  same application. We plan on adding support for more programming models and
  devices in the future, without the need for significant modifications in user
  code. The list of current backends is: "occa-cuda", "raja-cuda", "cuda",
  "occa-omp", "raja-omp", "omp", "occa-cpu", "raja-cpu", and "cpu".

- GPU-related limitations:
  * Hypre preconditioners are not yet available in GPU mode, and in particular