@@ -1755,8 +1755,6 @@ H1Ser_QuadrilateralElement::H1Ser_QuadrilateralElement(const int p)
    : ScalarFiniteElement(2, Geometry::SQUARE, (p*p + 3*p +6) / 2, p,
                          FunctionSpace::Qk)
 {
-   // ***  Do we want FunctionSpace = Pk or Qk for serendipity elements?   ***
-
    // Store the dof_map of the associated TensorBasisElement, which will be used to create the
    // serendipity dof map.  Its size is larger than the size of the serendipity element.
    TensorBasisElement *tbeTemp = new TensorBasisElement(2, p,
@@ -3710,21 +3708,21 @@ const double RT2TriangleFiniteElement::M[15][15] =
    },
    {
       -0.67620999227554986889, 0, -3.4427400463467007866, 0,
-      7.3524199845510997378, 0.67620999227554986889, 7.4141100695200511800, 0,
-      -0.76209992275549868892, 4.1189500386222506555, -12.,
-      -7.3524199845510997378, -3.2951600308978005244, -6.5903200617956010489,
-      12.
-   },
+         7.3524199845510997378, 0.67620999227554986889, 7.4141100695200511800, 0,
+         -0.76209992275549868892, 4.1189500386222506555, -12.,
+         -7.3524199845510997378, -3.2951600308978005244, -6.5903200617956010489,
+         12.
+      },
    {
       1.5, 0, 2.625, 0, -15., -1.5, -14.625, 0, 30., -4.125, 15., 15., 10.5,
       -15., -15.
    },
    {
       -5.3237900077244501311, 0, 24.442740046346700787, 0, 16.647580015448900262,
-      5.3237900077244501311, -34.414110069520051180, 0, -47.237900077244501311,
-      -19.118950038622250656, -12., -16.647580015448900262, 15.295160030897800524,
-      30.590320061795601049, 12.
-   },
+         5.3237900077244501311, -34.414110069520051180, 0, -47.237900077244501311,
+         -19.118950038622250656, -12., -16.647580015448900262, 15.295160030897800524,
+         30.590320061795601049, 12.
+      },
    { 0, 0, 18., 0, 0, 6., -42., 0, -30., -26., 0, -14., 24., 32., 8.},
    { 0, 0, 6., 0, 0, 18., -14., 0, -26., -30., 0, -42., 8., 32., 24.},
    { 0, 0, -6., 0, 0, -4., 30., 0, 4., 22., 0, 4., -24., -16., 0},
